<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StockagePartageFragment">

    <Button
        android:id="@+id/button_take_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_take_photo" />

    <Button
        android:id="@+id/button_open_photo_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_open_picker" />

    <ImageView
        android:id="@+id/image_preview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/button_take_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_take_video" />

    <Button
        android:id="@+id/button_open_video_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_open_picker" />

    <VideoView
        android:id="@+id/video_preview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>